<resources>
    <string name="app_name">Eyes Jean Shop</string>
    <string name="filters">Filters</string>
    <string name="options">Options</string>
    <string name="buttonWS">Waiting Section</string>
    <string name="buttonFav">Favorites</string>
    <string name="buttonSH">Shopping History</string>


    <string name="text_edit_text">Search</string>
    <string-array name="itemL_list">
        <item>All list</item>
        <item>Colors</item>
        <item>Category</item>
    </string-array>
    // end strings activity main

    //Strings activity list product

    <string name="title_list_product">List Products</string>

    <string-array name="example_products">
        <item>Producto 1</item>
        <item>Producto 2</item>
        <item>Producto 3</item>
        <item>Producto 4</item>
        <item>Producto 5</item>
        <item>Producto 6</item>
        <item>Producto 7</item>
        <item>Producto 8</item>
        <item>Producto 9</item>
        <item>Producto 10</item>
        <item>Producto 11</item>
        <item>Producto 12</item>
        <item>Producto 13</item>
        <item>Producto 14</item>
        <item>Producto 15</item>
    </string-array>

    //String activity detail product

    <string name="title_detail_product">Producto 1</string>
    <string name="description">Description: .....</string>
    <string name="unit">Unit:</string>
    <string name="price">Price:</string>
    <string name="buttonCal">Calculate</string>
    <string name="buttonBuy">BUY</string>
    <string name="value">Value$</string>
    <string name="buttonFavorities">Favorities</string>

    //Strings activity section waiting section

    <string name="titleWS">Waiting Section</string>
    <string name="titleProduct">Product</string>
    <string name="titleCant">Quantity</string>
    <string name="titlePrice">Price</string>

    // Strings activity Favorities

    <string name="title_favorites_product">Favorites</string>

    <string-array name="example_products_favorites">
        <item>Producto 1</item>
        <item>Producto 4</item>
        <item>Producto 5</item>
        <item>Producto 6</item>
        <item>Producto 7</item>
        <item>Producto 8</item>
        <item>Producto 9</item>
        <item>Producto 15</item>
    </string-array>

    // strings activity history


    <string name="title_history">Shopping History</string>

    <string-array name="example_Shopping_history">
        <item>Buy 1</item>
        <item>Buy 2</item>
        <item>Buy 3</item>
        <item>Buy 4</item>
        <item>Buy 6</item>
    </string-array>


    // String activity detail buy

    <string name="title_buy_example">Buy 1</string>




</resources>
